--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Redes Socias</title>
     <link rel="stylesheet" href="style.css">
-    <script src="https://cdn.plot.ly/plot-2.27.0.min.js" charset="UTF-8"></script>
+    <script src="https://cdn.plot.ly/plotly-2.27.0.min.js" charset="UTF-8"></script>
 </head>
 <body>
     <header>
